# fastapi-todo

./: .dockerignore  .gitignore  Docker.md  Dockerfile  JWT Authentication — Concept.md  Middleware & Error Handling — Concept.md  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
core/: config.py  exceptions.py  middleware.py  security.py
crud/: todo.py  user.py
models/: todo.py  user.py
routers/: auth.py  todos.py
schemas/: todo.py  user.py
